# JobApplier.AI

./: .gitignore  README.md  linkedin_login.py  pyproject.toml  requirements.txt
keys/: gemini-key.txt  openai-key.txt
linkedin/: easy_apply.py  main.py
my_data/: apply_with_urls.txt  easy_apply_urls_only.txt  instructions_to_ai.txt  other_info.txt  qna_list.txt
src/: __init__.py  config.py  main.py
src/ai/: ai_helper.py  ai_utils.py  cache_manager.py  gemini_provider.py  openai_provider.py
src/linkedin/: __main__.py  application_flow.py  constants.py  dom_parser.py  easy_apply.py  form_filler.py  form_parser.py  job_search.py  login.py  main.py
src/scripts/: apply_from_linkedin.py
src/utils/: __init__.py  cache_manager.py  common_uitls.py  common_utils.py  constants.py  csv_utils.py  demo_transform.py  json_utils.py  other_info_manager.py  qna_manager.py  run_data_manager.py  txt_utils.py  user_data_manager.py
