[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobapplier-ai"
version = "0.1.0"
description = "AI-powered Job Application Automation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Prem Ranjan", email = "premranjandev@live.com"}
]
dependencies = [
    "playwright>=1.40.0",
    "openai>=1.0.0",
    "google-genai>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
